# EdPlan

./: Code Audit Report 30-May-26 Rudra V1.0.docx  README.md  current_status.md  dev-test.html  frontend_backend_status.md  frontend_backend_status_v2.md  orchestrator_audit.md
fastapi_backend/: README.md  context.md  pyproject.toml  requirements.txt
fastapi_backend/alembic/: env.py
fastapi_backend/alembic/versions/: 0005_create_academic_planning_tables.py  0006_add_legacy_education_plan_id.py  0007_allow_active_plan_schedules.py  0008_enforce_single_active_plan_schedule.py  0009_create_phase_a_agentic_schema.py  0010_create_schedulepilot_phase_b1_tables.py
fastapi_backend/app/: main.py
fastapi_backend/app/api/: chat.py
fastapi_backend/app/api/routes/: __init__.py  nexus.py
fastapi_backend/app/core/: config.py  dependencies.py  exceptions.py  plugin_loader.py  security.py
fastapi_backend/app/models/: __init__.py  agentic.py
fastapi_backend/app/orchestrator/: __init__.py
fastapi_backend/app/orchestrator/composer/: __init__.py  (+1 more)
fastapi_backend/app/services/: __init__.py  groq_service.py  nexus_service.py
fastapi_backend/tests/: test_nexus_service.py
fastapi_backend/tests/orchestrator/: test_academic_planning_orchestration.py  test_context_loader.py  test_intent_router.py  test_llm_infrastructure.py  test_memory_manager.py  test_module_executor.py  test_module_integration_workflow.py  test_module_registry.py  test_module_selector.py  test_observability.py  test_response_composer.py  test_schedulepilot_orchestration.py  test_student_graph.py
(+317 files in other folders)
